@@ -33,8 +33,8 @@
 #include <sstream>
 #include <cppunit/extensions/HelperMacros.h>
 #include "triangulation/dim3.h"
+#include "triangulation/dim3/homologicaldata.h"
 #include "triangulation/example3.h"
-#include "triangulation/homologicaldata.h"
 #include "testsuite/dim3/testtriangulation.h"
 
 using regina::Example;
